# mtfind

./: CMakeLists.txt  Dockerfile  README.md  mtfind.cpp
includes/: matches_finding.h  thread_matches_finding.h
sources/: mask_handling.cpp  matches_finding.cpp  thread_matches_finding.cpp
tests/: CMakeLists.txt  mask_handling_test.cpp  matches_finding_test.cpp
